--- a/flutter_gymapp/pubspec.yaml
+++ b/flutter_gymapp/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.22.0
+  firebase_auth: ^4.14.0
 
 dev_dependencies:
   flutter_test:
